Mon Jul 20 17:30:12 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (gnome_client_init): Only reallocate buffer if
	errno is ERANGE.

Sun Jul 19 23:07:38 1998  George Lebl  <jirka@5z.com>

	* gnome-propertybox.c: fix the {set,get}_data calls, they now use
	  the proper object

1998-07-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_item_construct
	gnome_canvas_item_constructv): Removed the unused type parameter.

	* gnome-canvas-line.c (recalc_bounds): Implemented the
	bounds-calculation routine.

	* gnome-canvas-util.c (gnome_canvas_get_miter_points): New public
	function to compute the miter points of a line's corner.

	* gnome-canvas-line.c (gnome_canvas_line_destroy): Free line
	structure's fields properly.
	(gnome_canvas_line_draw): Optimization: use a static array of
	points instead of allocating one, when possible.

Sun Jul 19 22:54:12 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.h, gnome-canvas-c: Added
	gnome_canvas_item_construct,
	gnome_canvas_item_constructv

Sun Jul 19 18:06:38 1998  Tom Tromey  <tromey@cygnus.com>

	Reverted change of July 7:
	* gnome-client.c (gnome_client_save): Removed.
	(gnome_client_restart_session): Removed.
	* gnome-client.h (gnome_client_save,
	gnome_client_restart_session): Removed.

1998-07-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_item_raise
	gnome_canvas_item_lower): Do not accept values less than 1.
	(gnome_canvas_item_raise_to_top
	gnome_canvas_item_lower_to_bottom): New public functions to
	raise/lower an item to the top/bottom of its parent's z-order,
	respectively.

	* gnome-canvas-rect-ellipse.c (gnome_canvas_rect_draw
	gnome_canvas_ellipse_draw): Made a little optimization when
	converting item coordinates to canvas pixel coordinates.

	* Makefile.am: Added gnome-canvas-line and gnome-canvas-util to the
	sources.

	* gnome-canvas.c (gnome_canvas_item_new gnome_canvas_item_newv):